# canvas-lms-mcp

./: README.md  pyproject.toml
.cursor/: mcp.json
.github/workflows/: publish.yml
canvas_lms_mcp/: client.py  main.py  schema.py  tools.py
canvas_lms_mcp/usecases/: __init__.py  get_assignment.py  get_course.py  get_course_modules.py  get_course_syllabus.py  get_quiz.py  list_assignments.py  list_courses.py  list_files.py  list_planner_items.py  list_quizzes.py
src/canvas_lms_mcp/: main.py  schema.py
src/canvas_lms_mcp/usecases/: get_assignment.py  get_course.py  get_course_modules.py  get_course_syllabus.py  get_quiz.py  list_assignments.py  list_courses.py  list_files.py  list_planner_items.py  list_quizzes.py
