[project]
name = "canvas-lms-mcp"
version = "0.1.0"
description = "Minimal Canvas LMS MCP server for easy access to education"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["canvas_lms_mcp/*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "TID252"]
